--- a/wiki/Documentation.wiki
+++ b/wiki/Documentation.wiki
@@ -30,3 +30,5 @@ Requirements:
 Known bugs:
 
   * Button 2 and 3 are unreliable across different systems.
+
+If for some reason you want to get your own XTest: http://pypi.python.org/pypi/xtest/
