--- a/wiki/Documentation.wiki
+++ b/wiki/Documentation.wiki
@@ -2,7 +2,7 @@ Since this is a very simple module, here is the very simple documentation.
 
 = Introduction =
 
-To use this plugin put the python file and the dynamic library somewhere on the python path.
+To use this plugin put the python files somewhere on the python path.
 The next example illustrates basic usage:
 
 {{{
@@ -15,8 +15,16 @@ m = PyMouse()
 # move the mouse to int x and int y (these are absolute positions)
 m.move(200, 200)
 
-# click works about the same, except for int button possible values are 1: left, 2: right, 3: middle
+# click works about the same, except for int button possible values are 0: left, 1: middle, 2: right
 m.click(500, 300, 1)
+
+# get the screen size
+m.screen_size()
+# (1024, 768)
+
+# get the mouse position
+m.position()
+# (500, 300)
 }}}
 
 = Details =
@@ -25,10 +33,4 @@ Requirements:
 
   * objc(Mac only)
   * ctypes(Windows only)
-  * XTest(Unix, included)
-
-Known bugs:
-
-  * Button 2 and 3 are unreliable across different systems.
-
-If for some reason you want to get your own XTest: http://pypi.python.org/pypi/xtest/
+  * xlib(Unix only)
